<resources>
    <string name="app_name">DB Example</string>
    <string name="new_contact">New contact</string>
    <string name="new_contact_description">Please fill the fields to add a new contact.</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_contact_description">Are you sure you want to delete this contact?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name_2">First name:</string>
    <string name="last_name_2">Last name:</string>
    <string name="phone_number_2">Phone number:</string>
    <string name="no_contacts_currently">No contacts currently</string>
    <string name="search_by_last_name">Search by last name</string>
</resources>
